--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@types/jsdom": "^21.1.2",
+		"chrome-aws-lambda": "^10.1.0",
 		"html2canvas": "^1.4.1",
 		"jsdom": "^22.1.0",
 		"jspdf": "^2.5.1",
