--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
 		"jsdom": "^22.1.0",
 		"jspdf": "^2.5.1",
 		"pdf-merger-js": "^4.3.0",
+		"playwright-core": "^1.38.1",
 		"puppeteer": "^21.2.1",
+		"puppeteer-core": "^21.3.5",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
 	}
 }
