--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -39,6 +40,10 @@
 		"jspdf": "^2.5.1",
 		"pdf-merger-js": "^4.3.0",
 		"puppeteer": "^21.2.1",
+		"puppeteer-core": "^21.3.6",
 		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
+	},
+	"volta": {
+		"node": "18.18.0"
 	}
 }
